improve styling of widget controls, fix pane (modal) and backdrop z-index

--- a/src/style.scss
+++ b/src/style.scss
@@ -2,7 +2,7 @@ $break-small: 320px;
 $break-large: 1200px;
 
 :root {
-  --ctab-widget-controls-width: 20px;
+  --ctab-widget-controls-width: 60px;
   --topbar-height: 55px;
   --widget-border-color: #222;
   --background-color: #fff;
@@ -60,13 +60,6 @@ button, input, optgroup, select, textarea {
   opacity: 1;
   z-index: 6;
   overflow: visible !important;
-}
-
-.widget-control-picker {
-  width: 100%;
-  height: 100%;
-  max-height: 20px;
-  line-height: 15px;
 }
 
 .settings-pane-background {
@@ -262,7 +255,7 @@ div.muuri-item-placeholder {
 
 .ctab-widget-body {
   position: relative;
-  width: 100%; //calc(100% - var(--ctab-widget-controls-width));
+  width: 100%;
   height: 100%;
   text-align: center;
   vertical-align: middle;
@@ -280,26 +273,41 @@ div.muuri-item-placeholder {
 }
 
 .ctab-widget-controls {
-  height: calc(100% + 4px);
+  height: 19px;
+  padding-left: 2px;
+  padding-bottom: 2px;
   right: 0;
-  margin-right: calc(-.5 * var(--ctab-widget-controls-width));
-  margin-top: -2px;
   width: var(--ctab-widget-controls-width);
-  border: 2px solid black;
+  border-bottom: 1px solid #00000080;
+  border-left: 1px solid #00000080;
+  border-radius: 0 0 0 5px;
   position: absolute;
   background: rgba(0, 0, 0, .4);
   z-index: 3;
   display: grid;
-  grid-template-columns: 100%;
-  grid-template-rows: 18px 20px 20px;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 100%;
+
+  div{
+    margin: 2px;
+  }
+
+  .widget-control-picker {
+    width: 90%;
+    height: 96%;
+    max-height: 20px;
+    line-height: 15px;
+    border-radius: 3px;
+    border-width: 1px;
+  }
 }
 
 .ctab-widget-drag-handle {
   position: absolute;
   top: 0;
   left: 0;
-  width: 18px;
-  height: 18px;
+  width: 19px;
+  height: 17px;
   margin: 3px;
   line-height: 11px;
   z-index: 3;
@@ -371,7 +379,7 @@ div.muuri-item-placeholder {
   border: 1px solid #ff0011;
   border-radius: 3px;
   background-color: rgba(255, 255, 255, 0.9);
-  z-index: 4;
+  z-index: 5;
 
   label, button {
     display: inline-block;
@@ -387,7 +395,7 @@ div.muuri-item-placeholder {
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 4;
+  z-index: 5;
   background-color: rgba(123, 123, 123, 0.6);
 }
 
